implement Film entity and CRUD endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.datasource.name=film-database
+spring.datasource.generate-unique-name=false
+#So you can access the DB at http://localhost:8080/h2-console
+spring.h2.console.enabled=true
+# Creates the database every start, and drops it when terminated. (= data written in data.sql is "permanent" only)
+spring.jpa.hibernate.ddl-auto=create-drop
 
+#NOTE The resources/schema.sql table was not created without this line for some reason, so it was added
+spring.sql.init.mode=always
+
+#Username to database
+spring.datasource.username=sa
+# URL to database (~ [tilde] means, you can find it in your root folder)
+spring.datasource.url=jdbc:h2:~/film-database;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+
+# Swagger API documentation in JSON can be found at http://localhost:8080/api-docs
+springdoc.api-docs.path=/api-docs
+# Interactive Swagger API documentation with UI can be found at http://localhost:8080/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.jpa.show-sql=true
